revert api edits
