# lib/units/api/controllers/devices.js
@@ -4,12 +4,19 @@ import dbapi from '../../../db/api.js'
 import logger from '../../../util/logger.js'
 import * as apiutil from '../../../util/apiutil.js'
 import * as lockutil from '../../../util/lockutil.js'
+import util from 'util'
 import {v4 as uuidv4} from 'uuid'
+import wire from '../../../wire/index.js'
+import wireutil from '../../../wire/util.js'
+import {WireRouter} from '../../../wire/router.js'
 import * as fake from '../../../util/fakedevice.js'
+import deviceutil from '../../../util/deviceutil.js'
+import * as jwtutil from '../../../util/jwtutil.js'
 import useDevice, {UseDeviceError} from '../helpers/useDevice.js'
 import * as Sentry from '@sentry/node'
 import {accessTokenAuth} from '../helpers/securityHandlers.js'
-const log = logger.createLogger('api:controllers:devices')
+import {DeviceOriginGroupMessage} from '../../../wire/wire.js'
+var log = logger.createLogger('api:controllers:devices')
 
 /* ------------------------------------ PRIVATE FUNCTIONS ------------------------------- */
 function filterGenericDevices(req, res, devices) {
@@ -336,77 +343,141 @@ function getDeviceBookings(req, res) {
             apiutil.internalError(res, 'Failed to get device bookings: ', err.stack)
         })
 }
+function addOriginGroupDevices(req, res) {
+    const serials = apiutil.getBodyParameter(req.body, 'serials')
+    const fields = apiutil.getQueryParameter(req.query.fields)
+    const target = apiutil.getQueryParameter(req.query.redirected) ? 'device' : 'devices'
 
-// Note: Device lists in groups change automatically
-const addDeviceToOriginGroup = async(req, res) => {
-    try {
-        const serial = req.query.serial || req.params.serial
-        const fields = req.query.fields
+    async function askUpdateDeviceOriginGroup(group, serial) {
+        log.info('[addOriginGroupDevices] Ask to update device origin group [serial: "%s", group: "%s"]', serial, group.id)
+        const signature = util.format('%s', uuidv4()).replace(/-/g, '')
+        const result = await dbapi.updateDeviceOriginGroup(serial, group, signature)
 
-        if (!serial?.length) {
-            throw new Error('serial is not specified')
+        if (result) {
+            log.info('[addOriginGroupDevices] Successfully updated device origin group [serial: "%s", group: "%s"]', serial, group.id)
+
+            const device = await dbapi.loadDeviceBySerial(serial)
+            if (fields) {
+                return _.pick(apiutil.publishDevice(device, req), fields.split(','))
+            }
+
+            return apiutil.publishDevice(device, req)
         }
-
-        const targetGroup = await dbapi.getUserGroup(req.user.email, req.params.id)
-        if (!targetGroup) {
-            throw new Error('target group not found')
-        }
-
-        const stats = await dbapi.lockDeviceByOrigin(req.user.groups.subscribed, serial)
-        if (stats.modifiedCount === 0) {
-            return apiutil.lightComputeStats(res, stats)
-        }
-
-        const signature = uuidv4().replace(/-/g, '')
-        await dbapi.updateDeviceOriginGroup(serial, targetGroup, signature)
-
-        lockutil.unlockDevice({device: stats.changes[0].new_val})
-
-        const device = await dbapi.loadDeviceBySerial(serial)
-        return apiutil.respond(res, 200, 'Updated (device)', apiutil.publishDevice(device, req))
     }
-    catch (/** @type {any} */e) {
-        log.error('[addDeviceToOriginGroup] failed to update device origin group: %s', e?.message)
-        apiutil.internalError('Failed to update device origin group')
-    }
-}
 
-// Note: Device lists in groups change automatically
-const removeDeviceFromOriginGroup = async(req, res) => {
-    try {
-        const serial = req.query.serial
-        const fields = req.query.fields
-
-        if (!serial?.length) {
-            throw new Error('serial is not specified')
-        }
-
-        const targetGroup = await dbapi.getRootGroup()
-        if (!targetGroup) {
-            throw new Error('target group not found')
-        }
-
+    function updateDeviceOriginGroup(group, serial) {
+        log.info('[addOriginGroupDevices] Add device %s to origin group %s', serial, group.id)
         const lock = {}
-        const stats = await dbapi.lockDeviceByOrigin(req.user.groups.subscribed, serial)
-        if (stats.modifiedCount === 0) {
-            return apiutil.lightComputeStats(res, stats)
+        return dbapi.lockDeviceByOrigin(req.user.groups.subscribed, serial).then(function(stats) {
+            if (stats.modifiedCount === 0) {
+                return apiutil.lightComputeStats(res, stats)
+            }
+            lock.device = stats.changes[0].new_val
+            return dbapi.isUpdateDeviceOriginGroupAllowed(serial, group)
+                .then(function(updatingAllowed) {
+                    if (!updatingAllowed) {
+                        log.error('[addOriginGroupDevices] Device group editing is not allowed %s', serial, group.id)
+                        apiutil.respond(res, 403, 'Forbidden (device is currently booked)')
+                        return Promise.reject('booked')
+                    }
+                    return askUpdateDeviceOriginGroup(group, serial)
+                })
+        })
+            .finally(function() {
+                lockutil.unlockDevice(lock)
+            })
+    }
+    function updateDevicesOriginGroup(group, serials) {
+        let results = []
+        return Promise.each(serials, function(serial) {
+            return updateDeviceOriginGroup(group, serial).then(function(result) {
+                results.push(result)
+            })
+        })
+            .then(function() {
+
+                /** @type {any} */
+                const result = target === 'device' ? {device: {}} : {devices: []}
+                results = _.without(results, 'unchanged')
+                if (!results.length) {
+                    return apiutil.respond(res, 200, `Unchanged (${target})`, result)
+                }
+                results = _.without(results, 'not found')
+                if (!results.length) {
+                    return apiutil.respond(res, 404, `Not Found (${target})`)
+                }
+                if (target === 'device') {
+                    result.device = results[0]
+                }
+                else {
+                    result.devices = results
+                }
+                return apiutil.respond(res, 200, `Updated (${target})`, result)
+            })
+            .catch(function(err) {
+                if (err !== 'booked' && err !== 'timeout' && err !== 'busy') {
+                    throw err
+                }
+            })
+    }
+
+    return dbapi.getUserGroup(req.user.email, req.params.id).then(function(group) {
+        log.info('[addOriginGroupDevices] Add devices to origin group with id: %s [%s | %s]', group?.id, group?.name, group?.class)
+        if (!group) {
+            return false
         }
-        lock.device = stats.changes[0].new_val
 
-        const signature = uuidv4().replace(/-/g, '')
-        await dbapi.updateDeviceOriginGroup(serial, targetGroup, signature)
+        if (!apiutil.isOriginGroup(group.class)) {
+            return apiutil.respond(res, 400, 'Bad Request (this group cannot act as an origin one)')
+        }
+        if (typeof serials !== 'undefined') {
+            return updateDevicesOriginGroup(group, _.without(serials.split(','), '').filter(function(serial) {
+                return group.devices.indexOf(serial) < 0
+            }))
+        }
 
-        lockutil.unlockDevice(lock)
-
-        const device = await dbapi.loadDeviceBySerial(serial)
-        return apiutil.respond(res, 200, 'Updated (device)', apiutil.publishDevice(device, req))
-    }
-    catch (/** @type {any} */e) {
-        log.error('[addDeviceToOriginGroup] failed to update device origin group: %s', e?.message)
-        apiutil.internalError('Failed to update device origin group')
-    }
+        log.info('[addOriginGroupDevices] Serials list is not specified')
+        return dbapi.loadDevicesByOrigin(req.user.groups.subscribed).then(function(devices) {
+            if (group.class === apiutil.BOOKABLE) {
+                return devices
+            }
+            return extractStandardizableDevices(devices)
+        })
+            .then(function(devices) {
+                const serials = []
+                devices.forEach(function(device) {
+                    if (group.devices.indexOf(device.serial) < 0) {
+                        serials.push(device.serial)
+                    }
+                })
+                return updateDevicesOriginGroup(group, serials)
+            })
+    })
+        .catch(function(err) {
+            apiutil.internalError(res, `Failed to update ${target} origin group: `, err.stack)
+        })
 }
+function addOriginGroupDevice(req, res) {
+    apiutil.redirectApiWrapper('serial', addOriginGroupDevices, req, res)
+}
+function removeOriginGroupDevices(req, res) {
+    return dbapi.getUserGroup(req.user.email, req.params.id).then(function(group) {
+        if (!group) {
+            return false
+        }
 
+        if (!apiutil.checkBodyParameter(req.body, 'serials')) {
+            req.body = {serials: group.devices.join()}
+        }
+        return dbapi.getRootGroup().then(function(group) {
+            req.params.id = group?.id
+            return addOriginGroupDevices(req, res)
+        })
+    })
+}
+function removeOriginGroupDevice(req, res) {
+    apiutil.redirectApiWrapper('serial', removeOriginGroupDevices, req, res)
+}
 function putDeviceInfoBySerial(req, res) {
     const serial = req.params.serial
     const body = req.body
@@ -623,8 +694,10 @@ export {getDeviceOwner}
 export {getDeviceGroups}
 export {getDeviceType}
 export {getDeviceBookings}
-export {addDeviceToOriginGroup}
-export {removeDeviceFromOriginGroup}
+export {addOriginGroupDevice}
+export {addOriginGroupDevices}
+export {removeOriginGroupDevice}
+export {removeOriginGroupDevices}
 export {deleteDevice}
 export {deleteDevices}
 export {updateStorageInfo}
@@ -641,8 +714,10 @@ export default {
     getDeviceGroups: getDeviceGroups,
     getDeviceType: getDeviceType,
     getDeviceBookings: getDeviceBookings,
-    addDeviceToOriginGroup: addDeviceToOriginGroup,
-    removeDeviceFromOriginGroup: removeDeviceFromOriginGroup,
+    addOriginGroupDevice: addOriginGroupDevice,
+    addOriginGroupDevices: addOriginGroupDevices,
+    removeOriginGroupDevice: removeOriginGroupDevice,
+    removeOriginGroupDevices: removeOriginGroupDevices,
     deleteDevice: deleteDevice,
     deleteDevices: deleteDevices,
     updateStorageInfo: updateStorageInfo,
