# lib/units/api/paths/devices/{serial}/groups/{id}.js
@@ -1,15 +1,15 @@
 // Generated by /lib/units/api/gen_routes.py. DO NOT EDIT MANUALLY
 // Generated for controller devices
 
-import {addDeviceToOriginGroup, removeDeviceFromOriginGroup} from '../../../../controllers/devices.js'
+import {addOriginGroupDevice, removeOriginGroupDevice} from '../../../../controllers/devices.js'
 
 export function put(req, res) {
-    return addDeviceToOriginGroup(req, res)
+    return addOriginGroupDevice(req, res)
 }
 
 
 export function del(req, res) {
-    return removeDeviceFromOriginGroup(req, res)
+    return removeOriginGroupDevice(req, res)
 }
 
 
